--- a/skillshare/pom.xml
+++ b/skillshare/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
+		<groupId>org.springframework.boot</groupId>p
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.4</version>yy
 		<relativePath/>
